Fix DataTable break issue on firefox

--- a/web/assets/admin/layout/css/custom.css
+++ b/web/assets/admin/layout/css/custom.css
@@ -125,3 +125,6 @@ Change Quick Sidebar Width
 .control-label.required:after{
     content: ' *';
 }
+div.dataTables_scroll{
+    clear: both;
+}
